--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "scripter": "nodemon readFile.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.28",
-    "dotenv": "^8.2.0"
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
