--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "mongoose": "^5.9.28"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4"
   }
 }
